--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,18 @@
         }
     ],
     "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "^8.5",
+        "phpstan/phpstan": "^0.12.90"
+    },
     "autoload": {
         "psr-4": {
             "arslanimamutdinov\\ISOStandardUtilities\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "arslanimamutdinov\\ISOStandardUtilities\\tests\\": "tests/"
         }
     }
 }
