--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^8.5",
-        "phpstan/phpstan": "^0.12.90"
+        "phpstan/phpstan": "^0.12.90",
+        "pcov/clobber": "^2.0"
     },
     "autoload": {
         "psr-4": {
