--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
             "email": "ara.imamutdinov@gmail.com"
         }
     ],
+    "license": "MIT",
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^8.5",
