--- a/.github/workflows/ci-coverage.yml
+++ b/.github/workflows/ci-coverage.yml
@@ -22,6 +22,8 @@ jobs:
           XDEBUG_MODE: coverage
 
       - name: Generate test coverage badge
+          uses: ./
           with:
             coverage_badge_path: 'badge.svg'
             push_badge: true
+            repo_token: ${{ secrets.GITHUB_TOKEN }}
