--- a/.github/workflows/ci-coverage.yml
+++ b/.github/workflows/ci-coverage.yml
@@ -22,7 +22,7 @@ jobs:
           XDEBUG_MODE: coverage
 
       - name: Generate test coverage badge
-          uses: .
+          uses: php-actions/phpunit-coverage-badge
           with:
             coverage_badge_path: 'badge.svg'
             push_badge: true
