--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,9 @@ jobs:
       - name: PHPStan Static Analysis
         uses: php-actions/phpstan@v3
         with:
-          path: [src/, tests/]
+          path:
+            - src/
+            - tests/
           level: 5
 
       - name: PHPUnit Tests
