--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: PHPStan Static Analysis
         uses: php-actions/phpstan@v3
         with:
-          directories: src/ tests/
+          path: src/ tests/
           level: 5
 
       - name: PHPUnit Tests
