--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^8.5",
-        "phpstan/phpstan": "^0.12.90",
-        "phpmd/phpmd": "*"
+        "phpstan/phpstan": "^0.12.90"
     },
     "autoload": {
         "psr-4": {
