--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^8.5",
-        "phpstan/phpstan": "^0.12.90"
+        "phpstan/phpstan": "^0.12.90",
+        "squizlabs/php_codesniffer": "3.6.2"
     },
     "autoload": {
         "psr-4": {
